fix css code that prevent the index html to show main pictures behind search box

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -32,19 +32,19 @@ header {
 }
 
 .searchpicture1 {
-  background: url('/Resources/food.jpg');
+  background: url('./Resources/food.jpg');
   background-size: cover;
   background-position: center;
 }
 
 .searchpicture2 {
-  background-image: url('/Resources/food2.jpg');
+  background-image: url('./Resources/food2.jpg');
   background-size: cover;
   background-position: center;
 }
 
 .searchpicture3 {
-  background-image: url('/Resources/food3.jpg');
+  background-image: url('./Resources/food3.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -177,7 +177,7 @@ header {
 }
 
 .filtercontainer {
-  background-image: url('/Resources/searchbanner.jpg');
+  background-image: url('./Resources/searchbanner.jpg');
   background-position: center;
   background-size: cover;
   box-shadow: inset 0 0 150px 150px rgba(0, 51, 59, 0.678);
@@ -325,7 +325,7 @@ header {
     display: flex;
     flex-direction: column;
     color: white;
-    background-image: url('/Resources/noimageprofile.jpg');
+    background-image: url('./Resources/noimageprofile.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
